--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "dev": "mix",
+        "watch": "mix watch",
+        "prod": "mix --production"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
@@ -9,6 +12,7 @@
         "axios": "^1.7.4",
         "bootstrap": "^5.2.3",
         "concurrently": "^9.0.1",
+        "laravel-mix": "^6.0.49",
         "postcss": "^8.4.47",
         "sass": "^1.56.1",
         "tailwindcss": "^3.4.13"
